# sft-server

./: .env.dist  Cargo.toml  README.md  build.rs  docker-compose.yml
.github/workflows/: actions.yaml
api/collection/: generated-requests.http
api/protos/: auth.proto  user.proto
gateway-auth/: .env.dist  Cargo.toml  build.rs
gateway-auth/api/collection/: generated-requests.http
gateway-auth/api/protos/: auth.proto
gateway-auth/src/: auth_service.rs  di_container.rs  main.rs  user_service.rs
gateway-auth/src/application/: mod.rs
gateway-auth/src/application/command/: login_command.rs  mod.rs  refresh_token_command.rs
gateway-auth/src/application/error/: mod.rs
gateway-auth/src/application/query/: mod.rs  verify_token_query.rs
gateway-auth/src/domain/jwt/: jwt_model.rs  mod.rs
gateway-auth/src/infrastructure/: mod.rs
gateway-auth/src/infrastructure/interceptor/: auth_interceptor.rs
gateway-auth/src/infrastructure/service/: jwt.rs
grpc/: .env  .env.dist  .gitignore  Cargo.toml
grpc/api/collection/: generated-requests.http
grpc/src/: config.rs  server.rs
grpc/src/di/: container.rs  mod.rs
grpc/src/interceptor/: auth_interceptor.rs
grpc/src/service/: token.rs
migrations/: 20240731190232_user.sql  20241030174859_create_users_token.sql
src/: server.rs
src/app/: mod.rs
src/app/command/: login_user_command.rs  mod.rs
src/app/error/: mod.rs
src/app/query/: get_full_url.rs  mod.rs
src/di/: container.rs  mod.rs
src/domain/user/: mod.rs  (+1 more)
src/interceptor/: auth_interceptor.rs
src/service/: mod.rs  password_service.rs  token.rs
(+10 files in other folders)
