[package]
name = "gateway-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
shaku = "0.6"
async-trait = "0.1"
jsonwebtoken = "9.3"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.38"
sqlx = { version = "0.8.0", features = ["postgres", "sqlx-postgres", "runtime-async-std", "uuid", "macros", "chrono"] }
install = "0.0.0"
vendor = "0.2.0"
dotenv = "0.15.0"
uuid = { version = "1.10.0", features = ["v7"] }
url = "2.5.2"
thiserror = "2.0.1"
mockall = "0.13.0"
argon2="0.5.3"
tower = "0.5.1"
tonic-middleware = "0.2.3"
serde_json = "1.0.132"

[build-dependencies]
tonic-build = "0.12.1"

